# Trigonometry-Trainer

./: .gitignore  README.md  pyproject.toml
src/: generate_question.py  main_frame.py  trig_math.py
