[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trig-sketching-trainer"
version = "0.1.0"
description = "A Tkinter + Matplotlib trig sketching practice app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
]

[project.scripts]
trig-trainer = "src.main_frame:main"
